Issue #10383: Fix two leaks.